--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: 'Source Sans Pro';
+}
+:root {
+    --discoverColumnPadding: 30px;
+    --numberOfDiscoverColumns: 5;
+    --maxPrimaryPageWidth: 1400px;
+    --imageBorderRadius: 8px;
+    --scrollerGrey: 219, 219, 219;
+    --lightGrey: 227, 227, 227;
+    --darkerGrey: 200, 200, 200;
+    --tmdbDarkBlue: 3, 37, 65;
+    --tmdbLightBlue: 1, 180, 228;
+    --tmdbLighterGreen: 192, 254, 207;
+    --tmdbLightGreen: 30, 213, 169;
+    --tmdbLogoGreen: 144, 206, 161;
+    --tmdbLogoOrange: 253, 193, 112;
+    --tmdbLogoRed: 217, 59, 99;
+    --accountSilver: 149, 149, 149;
+    --accountPink: 234, 20, 140;
+    --accountPurple: 128, 91, 231;
+    --accountGreen: 1, 210, 119;
+    --accountTeal: 1, 198, 172;
+    --accountLightBlue: 1, 180, 228;
+    --accountBlue: 1, 119, 210;
+    --accountOrange: 210, 119, 1;
+    --accountYellow: 210, 144, 1;
+    --accountRed: 212, 2, 66;
+    --imageBorderRadius: 8px;
+    --maxPrimaryPageWidth: 1400px;
+}
+.container {
+    max-width: unset !important;
+    padding: 0 40px;
+}
+h2 {
+    font-size: 1.5em;
+    margin: 0;
+    font-weight: 600;
+}
+.overlay-element {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 6;
+}
+.youtube-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
 }
